--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -1,3 +1,5 @@
+/* GLOBAL TAG AND VARIABLES */
+
 * {
     margin: 0;
     padding: 0;
@@ -7,10 +9,31 @@
 :root { 
     --modal-button-color: #ffd966;
     --global-text-color: #000000;
-    --home-page-background-color: #505050;
+    --home-page-background-color: #a5a5a5;
     --gmae-page-background-color: #4c6c06;
 }
 
+/* ELEMENT */
+
+html,body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+body {
+    background-color: var(--home-page-background-color);
+}
+
+main {
+    height: 100vh;
+}
+
+footer {
+    margin-top: auto;
+}
+
+/* CLASSES */
 
 .title {
     text-align: center;
@@ -21,18 +44,20 @@
     margin-top: 2rem;
 }
 
-body {
-    background-color: var(--home-page-background-color);;
+.flex-container {
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-footer button {
-    display: flex;
-    justify-content: center;
-}
+/* ID */
 
 #player-stats-modal {
     background-color: var(--modal-button-color);
     color: var(--global-text-color);
     border-radius: 5px 5px 5px 5px;
-    padding: 5px;
+    padding: 15px;
+    margin: 25px;
 }
