added style to second heading

--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -24,7 +24,7 @@ html,body {
 }
 
 main {
-    height: 100vh;
+    height: 100%;
 }
 
 
@@ -77,17 +77,21 @@ a:active {
     align-items: center;
 }
 
+.second-heading {
+margin-bottom: 75px;
+}
+
 .second-heading > h2 {
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     font-family: serif;
-    font-size: 2rem;
+    font-size: 2.75rem;
     height: 75%;
 }
 .flex-container {
-    height: 100%;
+    height: 70%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -108,6 +112,7 @@ a:active {
 footer {
     display: flex;
     align-items: center;
+    height: 70px;
     
 }
 
