--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -98,6 +98,44 @@ margin-bottom: 75px;
     flex-wrap: wrap;
 }
 
+.modal {
+    display: flex;
+    justify-content: flex-start;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    font-weight: bold;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.3);
+  }
+  
+  .modal-content {
+    background-color: #ffd966;
+    padding: 20px;
+    border: 1px solid #000;
+    width: 50%;
+    height: 100%;
+  }
+  
+  .close {
+    color: #000;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
 /* ID */
 
 #player-stats-modal {
