added back button to all game pages, set the cursor to pointer when hovered on buttons and cards

--- a/assets/css/card-easy.css
+++ b/assets/css/card-easy.css
@@ -1,8 +1,8 @@
 body {
-    min-width: 100vw;
     min-height: 100vh;
     background-color: #007008;
     color: white;
+    overflow-x: hidden;
 }
 
 h1, h2 {
@@ -36,8 +36,21 @@ p {
 .card:hover {
     transform: scale(1.07);
     transition: transform 0.25s;
+    cursor: pointer;
 }
 
 .game-info-container {
     grid-column: 1 / -1;
+}
+
+.backBtn {
+    background-color: #ffd966;
+    color: #000000;
+    font-size: larger;
+    font-weight: bold;
+    margin: 5px;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px;
+    align-items: center;
+    cursor: pointer;
 }
