--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -75,6 +75,7 @@ a:active {
     border-radius: 5px 5px 5px 5px;
     padding: 10px;
     align-items: center;
+    cursor: pointer;
 }
 
 .second-heading {
@@ -119,6 +120,7 @@ margin-bottom: 75px;
     border: 1px solid #000;
     width: 50%;
     height: 100%;
+    
   }
   
   .close {
@@ -144,7 +146,10 @@ margin-bottom: 75px;
     border-radius: 5px 5px 5px 5px;
     padding: 15px;
     margin: 25px;
-    
+    font-size: larger;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: medium;
 }
 
 footer {
