made the game mode buttons bigger and added a slight scale increase when the cursor is hovering over the buttons

--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -76,6 +76,12 @@ a:active {
     padding: 10px;
     align-items: center;
     cursor: pointer;
+    transform: scale(3);
+}
+
+.buttonMode:hover {
+    transform: scale(3.03);
+    transition: transform 0.2s;
 }
 
 .second-heading {
