--- a/assets/css/card-easy.css
+++ b/assets/css/card-easy.css
@@ -1,56 +1,95 @@
 body {
-    min-height: 100vh;
-    background-color: #007008;
-    color: white;
-    overflow-x: hidden;
+  min-height: 100vh;
+  background-color: #007008;
+  color: white;
+  overflow-x: hidden;
 }
 
-h1, h2 {
-    text-align: center;
-    font-size: 3rem;
-    margin-top: 2rem;
+h1,
+h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin-top: 2rem;
 }
 
 p {
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
 }
 
-.game-container { 
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 50px;
-    justify-content: center;
-    
-
-}
-.card {
-    background-color: #ffd966;
-    height: 300px;
-    width: 200px;
-    border-radius: 10px;
-    
-}
-
-.card:hover {
-    transform: scale(1.07);
-    transition: transform 0.25s;
-    cursor: pointer;
+.game-container {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 50px;
+  justify-content: center;
+  perspective: 500px;
 }
 
 .game-info-container {
-    grid-column: 1 / -1;
+  grid-column: 1 / -1;
 }
 
+/* ##CSS For The Cards */
+
+.card {
+  height: 300px;
+  width: 200px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.card:hover {
+  transform: scale(1.07);
+  transition: transform 0.25s;
+  cursor: pointer;
+}
+
+.card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  overflow: hidden;
+  backface-visibility: hidden;
+  border-radius: 12px;
+  transition: transform 500ms ease-in-out;
+}
+
+.card-front {
+  transform: rotateY(180deg);
+}
+
+/* .card:hover needs to be changed to .card.visible when we add Javascript */
+
+.card:hover .card-back {
+  transform: rotateY(-180deg);
+}
+
+/* .card:hover needs to be changed to .card.visible when we add Javascript */
+
+.card:hover .card-front {
+  transform: rotateY(0deg);
+}
+
+/* ------------------- */
+
 .backBtn {
-    background-color: #ffd966;
-    color: #000000;
-    font-size: larger;
-    font-weight: bold;
-    margin: 5px;
-    border-radius: 5px 5px 5px 5px;
-    padding: 10px;
-    align-items: center;
-    cursor: pointer;
+  background-color: #ffd966;
+  color: #000000;
+  font-size: larger;
+  font-weight: bold;
+  margin: 5px;
+  border-radius: 5px 5px 5px 5px;
+  padding: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+
+#back-card-graphic {
+  position: absolute;
+  width: 100%;
+  height: 305px;
 }
