added background image for all pages and changed the colors of the buttons

--- a/assets/css/card-easy.css
+++ b/assets/css/card-easy.css
@@ -1,6 +1,8 @@
 body {
   min-height: 100vh;
-  background-color: #007008;
+  background-image: url("https://static.vecteezy.com/system/resources/previews/032/404/517/non_2x/green-background-with-card-playing-suits-gamble-velvet-texture-poker-table-decoration-with-gambling-and-bets-vector.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   color: white;
   overflow-x: hidden;
 }
@@ -77,8 +79,8 @@ p {
 /* ------------------- */
 
 .backBtn {
-  background-color: #ffd966;
-  color: #000000;
+  background-color: black;
+  color: whitesmoke;
   font-size: larger;
   font-weight: bold;
   margin: 5px;
@@ -86,6 +88,7 @@ p {
   padding: 10px;
   align-items: center;
   cursor: pointer;
+  border-color: white;
 }
 
 #back-card-graphic {
