--- a/assets/css/card-easy.css
+++ b/assets/css/card-easy.css
@@ -58,6 +58,7 @@ p {
   backface-visibility: hidden;
   border-radius: 12px;
   transition: transform 500ms ease-in-out;
+  backface-visibility: hidden;
 }
 
 .card-front {
@@ -66,13 +67,13 @@ p {
 
 /* .card:hover needs to be changed to .card.visible when we add Javascript */
 
-.card:hover .card-back {
+.card.card.flipped .card-back {
   transform: rotateY(-180deg);
 }
 
 /* .card:hover needs to be changed to .card.visible when we add Javascript */
 
-.card:hover .card-front {
+.card.flipped .card-front {
   transform: rotateY(0deg);
 }
 
