added the timer for it to switch back to the hidden view if the cards do not match

--- a/assets/css/card-easy.css
+++ b/assets/css/card-easy.css
@@ -67,7 +67,7 @@ p {
 
 /* .card:hover needs to be changed to .card.visible when we add Javascript */
 
-.card.card.flipped .card-back {
+.card.flipped .card-back {
   transform: rotateY(-180deg);
 }
 
