--- a/assets/css/card-easy.css
+++ b/assets/css/card-easy.css
@@ -67,7 +67,6 @@ label{
   backface-visibility: hidden;
   border-radius: 12px;
   transition: transform 500ms ease-in-out;
-  backface-visibility: hidden;
 }
 
 .card-front {
@@ -91,6 +90,7 @@ label{
 .backBtn {
   background-color: black;
   color: whitesmoke;
+  border-color: whitesmoke;
   font-size: larger;
   font-weight: bold;
   margin: 5px;
@@ -98,25 +98,20 @@ label{
   padding: 10px;
   align-items: center;
   cursor: pointer;
-  border-color: white;
 }
 
-#back-card-graphic {
-  position: absolute;
-  width: 100%;
-  height: 305px;
+/* Media Queries */
+@media (max-width: 768px) {
+  .game-container {
+    grid-template-columns: repeat(2, auto);
+  }
 }
 
-#player-stats-modal {
-  background-color: black;
-  color: whitesmoke;
-  border-color: whitesmoke;
-  border-radius: 5px 5px 5px 5px;
-  padding: 15px;
-  margin: 25px;
-  font-size: larger;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: medium;
+@media (max-width: 576px) {
+  .game-container {
+    .card {
+      height: 200px;
+      width: 150px;
+    }
+  }
 }
-
