--- a/assets/css/card-medium.css
+++ b/assets/css/card-medium.css
@@ -100,3 +100,25 @@ label{
     align-items: center;
     cursor: pointer;
 }
+
+/* Media Queries */
+@media (max-width: 992px) {
+  .game-container {
+    grid-template-columns: repeat(3, auto);
+  }
+}
+
+@media (max-width: 768px) {
+  .game-container {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 576px) {
+  .game-container {
+    .card {
+      height: 200px;
+      width: 150px;
+    }
+  }
+}
