--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -174,3 +174,35 @@ footer {
     
 }
 
+/* Media Queries */
+@media (max-width: 768px) {
+    .flex-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .buttonMode {
+        transform: scale(2);
+    }
+    .second-heading > h2 {
+        font-size: 2rem;
+    }
+    .title {
+        font-size: 3rem;
+    }  
+}
+
+@media (max-width: 576px) {
+    .flex-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .buttonMode {
+        transform: scale(1.5);
+    }
+    .second-heading > h2 {
+        font-size: 1.5rem;
+    }
+    .title {
+        font-size: 2rem;
+    }  
+}
